# Dual-Filter-Safety-Critical-Control

./: README.md
src/aws_robomaker_small_warehouse_world/models/aws_robomaker_warehouse_Bucket_01/: model.sdf
src/aws_robomaker_small_warehouse_world/models/aws_robomaker_warehouse_ClutteringA_01/: model.sdf
src/aws_robomaker_small_warehouse_world/models/aws_robomaker_warehouse_GroundB_01/meshes/: aws_robomaker_warehouse_GroundB_01_visual.DAE
src/aws_robomaker_small_warehouse_world/models/aws_robomaker_warehouse_ShelfD_01/: model.sdf
src/aws_robomaker_small_warehouse_world/models/aws_robomaker_warehouse_ShelfF_01/: model.sdf
src/aws_robomaker_small_warehouse_world/worlds/: no_roof_small_warehouse.world  small_warehouse.world
src/daten_analyse/previous_environments/five_obstacles/: cost_values.json  five_obs.world  input.json  min_dist.json  saliency_detection_statistics.json  time_analysis.json  xy_path_sod.json
src/daten_analyse/previous_environments/five_obstacles/comparing/: xy_path_base.json  xy_path_mpc_cbf.json  xy_path_mpcall.json  xy_path_mpczone.json
src/daten_analyse/previous_environments/one_obstacle/: cost_values.json  input.json  min_dist.json  one_obs.world  saliency_detection_statistics.json  time_analysis.json  xy_path_sod.json
src/daten_analyse/previous_environments/one_obstacle/comparing/: xy_path_base.json  xy_path_mpc_cbf.json  xy_path_mpcall.json  xy_path_mpczone.json
src/daten_analyse/previous_environments/scripts/: comparing2image.py  daten2image.py
src/daten_analyse/previous_environments/ten_obstacles/: cost_values.json  input.json  min_dist.json  saliency_detection_statistics.json  ten_obs.world  time_analysis.json
src/daten_analyse/previous_environments/ten_obstacles/comparing/: xy_path_base.json  xy_path_mpc_cbf.json  xy_path_mpcall.json  xy_path_mpczone.json  xy_path_sod.json
src/daten_analyse/previous_environments/twenty_one_obstacles/: cost_values.json  input.json  min_dist.json  saliency_detection_statistics.json  time_analysis.json  twenty_one_obs.world  xy_path_sod.json
src/daten_analyse/previous_environments/twenty_one_obstacles/comparing/: xy_path_base.json  xy_path_mpc_cbf.json  xy_path_mpcall.json  xy_path_mpczone.json
src/daten_analyse/sod_environments/dynamic_obstacles_environments/mix_obstacles/: cost_values.json  input.json  min_dist.json  saliency_detection_statistics.json  time_analysis.json  xy_path_sod.json
src/daten_analyse/sod_environments/path_following/elliptical_path/: cost_values.json  (+5 more)
src/realsense2_description/urdf/: _d435.gazebo.xacro
src/sod_avoidence/pointcloud_handle/: CMakeLists.txt  package.xml
src/sod_avoidence/pointcloud_handle/src/: obs_circle_rviz.cpp  obs_pcl_circle.cpp  obs_pcl_filter.cpp  obs_sphere_rviz.cpp
src/sod_avoidence/sod_mbs/: CMakeLists.txt  package.xml
src/sod_avoidence/sod_mbs/launch/: turtlebot3_dangerousgrad_test.launch
src/sod_avoidence/sod_mbs/scripts/: saliency_mbd.py  saliency_mbd_node.py
src/sod_avoidence/sod_mbs/src/: MBS.cpp  MBS.hpp  analyse_dob_use_depth.cpp
src/sod_avoidence/sod_mbs/worlds/: dangerous_obstacles_test.world  walk.dae
src/sod_avoidence/type2_D_ZCBFs/: CMakeLists.txt  package.xml
src/sod_avoidence/type2_D_ZCBFs/move_obstacles_avoidence/launch/: turtlebot3_mix_cylinder_obs_world.launch  turtlebot3_warehouse_world.launch
src/sod_avoidence/type2_D_ZCBFs/move_obstacles_avoidence/scripts/: control_obs_move.py  control_robot_move.py  move_obs_typeII-d-zcbfs_avoidence.py
src/sod_avoidence/type2_D_ZCBFs/move_obstacles_avoidence/worlds/: mix_obs.world
src/sod_avoidence/type2_D_ZCBFs/path_following_with_obstacles/launch/: turtlebot3_elliptical_path_following.launch  turtlebot3_sin_path_following.launch
src/sod_avoidence/type2_D_ZCBFs/path_following_with_obstacles/scripts/: elliptical_path_following_typeII-d-zcbfs_avoidence.py  path_generator.py  path_rviz_visualizer.py  sin_path_following_typeII-d-zcbfs_avoidence.py
src/sod_avoidence/type2_D_ZCBFs/path_following_with_obstacles/worlds/: elliptical_path_following.world  sin_path_following.world
src/sod_avoidence/type2_D_ZCBFs/preprocessing/launch/: turtlebot3_dangerous_obstacle_detection.launch
src/sod_avoidence/type2_D_ZCBFs/preprocessing/scripts/: obs_data_process.py
src/sod_avoidence/type2_D_ZCBFs/static_obstacles_avoidence/launch/: turtlebot3_static_cylinder_obs_world.launch
src/sod_avoidence/type2_D_ZCBFs/static_obstacles_avoidence/scripts/: static_obs_typeII-d-zcbfs_avoidence.py
src/sod_avoidence/type2_D_ZCBFs/static_obstacles_avoidence/worlds/: five_obs.world  one_obs.world  ten_obs.world  twenty_obs.world
src/turtlebot3/turtlebot3_description/urdf/: _d435i.gazebo.xacro  _d435i.urdf.xacro  turtlebot3_burger.gazebo.xacro  turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle_pi.urdf.xacro
src/turtlebot3_simulations/turtlebot3_gazebo/: package.xml
src/turtlebot3_simulations/turtlebot3_gazebo/rviz/: turtlebot3_gazebo_model.rviz
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: try_act.world
(+47 files in other folders)
